fixed image stretching, changed seeding image urls

--- a/react-app/src/components/main/Popular.css
+++ b/react-app/src/components/main/Popular.css
@@ -79,4 +79,5 @@
     width: 250px;
     height: 150px;
     border-radius: 20px;
+    object-fit: cover;
 }
