--- a/react-app/src/components/restaurant/SingleRestaurant.css
+++ b/react-app/src/components/restaurant/SingleRestaurant.css
@@ -6,6 +6,7 @@
     max-height: 300px;
     padding: 10px;
     border-radius: 30px;
+    object-fit: cover;
 }
 
 .restaurant__name {
